actually make the last commit work

--- a/MainWindow.resx
+++ b/MainWindow.resx
@@ -124,7 +124,7 @@
     <value>THIS IS FREE AND OPEN SOURCE SOFTWARE. IF YOU PAID FOR IT YOU GOT SCAMMED
 If you downloaded it from anywhere other than https://github.com/ItsLogic/Xbox-Achievement-Unlocker you also got scammed. The only official download location is the github page and built in auto-updater.
 Join the discord here: https://discord.gg/apCwkvfV8P
-The sole developer of this software is Draff#6900 (315923287953637377) 
+The main developer of this software is @draff (315923287953637377) on discord 
 Anyone else who said they made it are lying.</value>
   </data>
 </root>
